--- a/example.html
+++ b/example.html
@@ -28,7 +28,7 @@
     </head>
 
     <body>
-		<h1>TinyMCE Quick Start Guide</h1>
+		<h1>TinyMCE suggestions</h1>
 		<textarea id="mytextarea">
 			<p>Use one of this words from the list to see autocomplete. Use Tab for autocompletion</p>
 			<p>[
